blog align fix

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ P
     max-width: 600px;
     margin: auto;
 }
+.blogs {
+    max-width: 600px;
+    margin: auto;
+}
 
 /** links **/
 .link {
